--- a/FE/src/utils/Chatbot.module.scss
+++ b/FE/src/utils/Chatbot.module.scss
@@ -382,6 +382,12 @@
     gap: 16px;
     max-height: 350px;
     overflow-y: auto;
+    // overflow-x: hidden;  /* ẩn cuộn ngang */
+     overscroll-behavior: contain;
+
+    // /* ẩn scrollbar nhưng vẫn scroll được */ moi sua de tat cai line tim
+    scrollbar-width: none;          /* Firefox */
+    -ms-overflow-style: none;       /* IE 10+ */
 }
 
 .productCard {
@@ -821,7 +827,7 @@
     background: rgba(0, 0, 0, 0.02);
     border-radius: 8px;
 }
-
+// phần này chỉnh cái thanh tím ngang lên xuống 
 .productGrid::-webkit-scrollbar-thumb {
     background: linear-gradient(135deg, #667eea, #764ba2);
     border-radius: 8px;
